examples/test/testpolicy12745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12745
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key48: value38
      key42: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value4
          key48: value24
      podSelector:
        matchLabels:
          key11: value4
          key29: value27
          key27: value34
